--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^7.3.7",
     "motion": "^12.29.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
